--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="java" href="../static/java.js">
 </head>
 
 <!--BODY------------------>
@@ -18,9 +17,40 @@
         <li><strong><a href="#">About me</a></strong></li>
         <li><strong><a href="#">Contact</a></strong></li>
         <li><strong><a href="#">Work</a></strong></li>
-        <li><strong><a href="#" class="buttonLD">Light / Dark</a></strong></li>
+        <li><strong><button href="#" class="buttonLD" onclick="myFunction()">Light / Dark</button></strong></li>
     </ul>
 </nav>
 
+<section>
+<div>
+    <h2> ☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
+    <img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px"> 
+    <br>
+    <em> This is Snuk after a dust bath </em>
+</div>
+<div>
+    <h2> ☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
+    <img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px"> 
+    <br>
+    <em> This is Snuk after a dust bath </em>
+</div>
+</section>
+<br>
+<section>
+<div>
+    <h2> ☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
+    <img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px"> 
+    <br>
+    <em> This is Snuk after a dust bath </em>
+</div>
+<div>
+    <h2> ☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
+    <img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px"> 
+    <br>
+    <em> This is Snuk after a dust bath </em>
+</div>
+</section>
 
+
+<script src="../static/java.js"></script>
 </body>
