--- a/static/style.css
+++ b/static/style.css
@@ -1,20 +1,34 @@
-/*mobile*/
-
-/*pc*/
-
-/*light / dark*/
-.buttonLD{
-    height: 5%;
-    width: 5%;
-    border-radius: 5px;
-    border-color: rgb(149, 101, 194);
+@media screen and (max-width: 800px) {
+  ul, li, a{
+    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+  }
 }
 
-/*design*/
+/*mobile-----------------------------------------*/
+
+/*pc-----------------------------------------*/
+
+/*light / dark-----------------------------------------*/
+.dark-mode {
+    background-color: rgb(10, 8, 31);
+    color: rgb(243, 243, 248);
+} 
+
+.buttonLD{
+    font-weight: bold;
+    height: 5%;
+    border-radius: 5px;
+    border-color: rgb(99, 75, 233);
+    background-color: aliceblue;
+    padding: 5px;
+}
+
+/*design-----------------------------------------*/
 body{
     margin: 0;
     padding: 0;
     background-color:aliceblue;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -24,6 +38,7 @@ ul{
     overflow: hidden;
     background-color:rgba(178, 211, 240, 0.966);
 }
+
 li{
     list-style: none;
     float: left;
@@ -34,4 +49,14 @@ a{
     text-decoration: none;
     color: rgb(17, 52, 255);
     font-size: 20px;
+}
+
+div{
+    padding: 25px;
+    float: left;
+}
+
+section{
+    padding: 20px;
+    
 }
