--- a/templates/home.html
+++ b/templates/home.html
@@ -21,36 +21,14 @@
     </ul>
 </nav>
 
-<section>
-<div>
-    <h2> ☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
-    <img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px"> 
-    <br>
-    <em> This is Snuk after a dust bath </em>
+<div class="boxOuter">
+    <div class="divbox">
+        <div><img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px" class="box"></div>
+        <div><em class="box"> 1 blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</em></div>
+        <div><em class="box"> 2 blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</em></div>
+        <div><em class="box"> 3 blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</em></div>
+    </div>
 </div>
-<div>
-    <h2> ☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
-    <img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px"> 
-    <br>
-    <em> This is Snuk after a dust bath </em>
-</div>
-</section>
-<br>
-<section>
-<div>
-    <h2> ☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
-    <img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px"> 
-    <br>
-    <em> This is Snuk after a dust bath </em>
-</div>
-<div>
-    <h2> ☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
-    <img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px"> 
-    <br>
-    <em> This is Snuk after a dust bath </em>
-</div>
-</section>
-
 
 <script src="../static/java.js"></script>
 </body>
