--- a/templates/home.html
+++ b/templates/home.html
@@ -21,14 +21,14 @@
     </ul>
 </nav>
 
-<div class="boxOuter">
-    <div class="divbox">
-        <div><img src="../static/images/chinchilla.webp" alt="Chinchilla after dust bath" height="200px" width="250px" class="box"></div>
-        <div><em class="box"> 1 blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</em></div>
-        <div><em class="box"> 2 blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</em></div>
-        <div><em class="box"> 3 blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</em></div>
-    </div>
+
+<div class="divbox">
+    <div class="box"><img src="../static/images/chinchilla.webp" alt="Snuck the chinchilla" style="height: 250px; width: 250px;"></div>
+    <div class="box">19 years old</div>
+    <div class="box">favourite colour purple</div>
+    <div class="box">staffs</div>
 </div>
+
 
 <script src="../static/java.js"></script>
 </body>
