--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,3 @@
-@media screen and (max-width: 800px) {
-  ul, li, a{
-    width: 100%;
-  }
-}
 
 /*light / dark-----------------------------------------*/
 .dark-mode {
@@ -27,6 +22,8 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
+/* NAV*/
+
 
 ul{
     margin: 0;
@@ -47,37 +44,46 @@ a{
     font-size: 20px;
 }
 
-.boxOuter{
-    justify-content: center;
-    display: flex;
+/* SECTION*/
+.divbox {
+    margin: 20px auto;
+    width: 400px;
+    height: 400px;
+    display: grid;
+    grid-template-columns: 200px 200px;
+    grid-row: auto auto;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
 }
 
-.divbox {
-    display: grid;
-    grid-template-columns: repeat(2, 300px);
-    grid-template-rows: repeat(2, 300px);  
+@media (max-width: 768px){
+    .divbox{
+        width: 80%;
+        height: auto;
+        grid-template-columns: 1fr;
+        grid-row-gap: 30px
+    }
 }
+
 .box{
-    width: 250px;
-    padding: 10px;
-    margin: 0;
-    float: left;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* MOBILE / PC*/
 /* MOBILE */
-@media (max-width: 768px) {
-    nav {
-        position: fixed bottom;
-        top: 0;
-        left: 0;
+
+
+@media screen and (max-width: 800px) {
+    ul, li, a{
+        width: 100%;
+    }
+    nav{
+        position: fixed;
+        bottom: 0;
+        width: 100%;
     }
 }
 
-/* PC */
-@media (min-width: 769px) {
-    nav {
-        position: sticky;
-        top: 0;
-    }
-}
